# macbinary

./: .cirrus.yml  .gitignore  Cargo.toml  Makefile  README.md
src/: binary.rs  error.rs  lib.rs  macroman.rs  resource.rs  wasm.rs
src/binary/: read.rs
tests/: README.md
