[package]
name = "macbinary"
version = "0.1.0-alpha"
edition = "2021"

description = "MacBinary and resource fork parser"
keywords = ["macos", "retro", "computing"]
# categories = ["command-line-utilities", "web-programming"]

homepage = "https://github.com/wezm/rsspls"
repository = "https://github.com/wezm/rsspls.git"

readme = "README.md"
license = "Apache-2.0"

[dependencies]
crc = "3.0.1"
