[package]
name = "macbinary"
version = "0.2.0"
edition = "2021"

description = "MacBinary and resource fork parser"
keywords = ["macos", "retro", "computing", "no_std"]
categories = ["parser-implementations", "encoding", "wasm", "no-std"]

homepage = "https://7bit.org/macbinary/"
repository = "https://github.com/wezm/macbinary"

readme = "README.md"
license = "Apache-2.0"

[lib]
# cdylib is for WASM
crate-type = ["cdylib", "rlib"]

[dependencies]
crc = "3.0.1"
heapless = { version = "0.7.16", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
serde_bytes = "0.11.9"
wasm-bindgen = "0.2.84"

[features]
no_std = ["heapless"]
